<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout style="@style/inputArea">

                <Spinner
                    android:id="@+id/spinnerId"
                    style="@style/spinnerStyle" />

                <EditText
                    android:id="@+id/valueEditTextId"
                    style="@style/inputEditText"
                    android:hint="@string/enter_the_value_here"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/convertButtonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green"
                    android:text="@string/convert"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/refreshId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/reset_color"
                    android:drawableTint="@color/white"
                    android:padding="10dp"
                    app:drawableEndCompat="@drawable/ic_baseline_replay_circle_filled_24"
                    tools:ignore="UnusedAttribute,UseCompatTextViewDrawableXml" />
            </LinearLayout>

            <TextView
                android:id="@+id/outputTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">


                    <!--Celsius Area-->
                    <LinearLayout
                        android:id="@+id/celsiusAreaId"
                        style="@style/outputArea"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/celsiusTextBgId"
                            style="@style/outputLeft"
                            android:text="@string/celsius" />

                        <TextView
                            android:id="@+id/celsiusValueId"
                            style="@style/outputRight" />
                    </LinearLayout>

                    <!--Kelvin Area-->
                    <LinearLayout
                        android:id="@+id/kelvinAreaId"
                        style="@style/outputArea"
                        android:visibility="visible">

                        <TextView
                            style="@style/outputLeft"
                            android:text="@string/kelvin" />

                        <TextView
                            android:id="@+id/kelvinValueId"
                            style="@style/outputRight" />
                    </LinearLayout>

                    <!--Fahrenheit Area-->
                    <LinearLayout
                        android:id="@+id/fahrenheitAreaId"
                        style="@style/outputArea"
                        android:visibility="visible">

                        <TextView
                            style="@style/outputLeft"
                            android:text="@string/fahrenheit"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/fahrenheitValueId"
                            style="@style/outputRight" />
                    </LinearLayout>

                    <!--Rankine Area-->
                    <LinearLayout
                        android:id="@+id/rankineAreaId"
                        style="@style/outputArea"
                        android:visibility="visible">

                        <TextView
                            style="@style/outputLeft"
                            android:text="@string/rankine"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/rankineValueId"
                            style="@style/outputRight" />
                    </LinearLayout>


                </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>